--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "stripe": "^17.4.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
