--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-jwt": "^4.0.1",
     "stripe": "^17.4.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   }
 }
